--- a/index.css
+++ b/index.css
@@ -14,15 +14,15 @@
 }
 
 .footer-container {
+  height: 20px;
   display: flex;
   justify-content: center;
   align-items: center;
   background-color: #f8f9fa;
   padding: 20px;
-  position: absolute;
-  bottom : 0;
   width: 100%;
 }
+
 
 .header-text{
     font-size: 28px;
@@ -35,4 +35,30 @@
     display: flex;
     gap: 20px;
     list-style: none;
+}
+
+.body-container {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  padding: 5px;
+  margin : auto;
+  width: 100%;
+}
+
+.rescard-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 150px;
+  height: auto;
+  margin: 20px;
+  padding: 20px;
+  border-radius: 10px;
+  background-color: #f0f0f0;
+}
+
+.rescard-img{
+    width: 125px;
+    height: 100px;
 }
