--- a/index.css
+++ b/index.css
@@ -46,7 +46,7 @@
   width: 100%;
 }
 
-.rescard-container {
+.rescard-container{
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -61,4 +61,22 @@
 .rescard-img{
     width: 125px;
     height: 100px;
+}
+
+.shimmercard-container {
+  width: 150px;
+  height: 250px;
+  padding: 16px;
+  border-radius: 10px;
+  background-color: #f0f0f0;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+}
+
+.shimmer-container {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 16px;
+  padding: 20px;
 }
