--- a/index.css
+++ b/index.css
@@ -1,82 +1,1 @@
-.header-container {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  background-color: #f8f9fa;
-}
-
-.logo {
-    width: 75px;
-    height: 75px;
-    padding: 5px 10px;
-    border-radius: 50%;
-    background-color:cornsilk
-}
-
-.footer-container {
-  height: 20px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: #f8f9fa;
-  padding: 20px;
-  width: 100%;
-}
-
-
-.header-text{
-    font-size: 28px;
-    font-weight: bold;
-    color: #343a40;
-}
-
-.header-options {
-    font-size: 18px;
-    display: flex;
-    gap: 20px;
-    list-style: none;
-}
-
-.body-container {
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  padding: 5px;
-  margin : auto;
-  width: 100%;
-}
-
-.rescard-container{
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  width: 150px;
-  height: auto;
-  margin: 20px;
-  padding: 20px;
-  border-radius: 10px;
-  background-color: #f0f0f0;
-}
-
-.rescard-img{
-    width: 125px;
-    height: 100px;
-}
-
-.shimmercard-container {
-  width: 150px;
-  height: 250px;
-  padding: 16px;
-  border-radius: 10px;
-  background-color: #f0f0f0;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-}
-
-.shimmer-container {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 16px;
-  padding: 20px;
-}
+@import "tailwindcss";
